--- a/Project-RNN.ipynb
+++ b/Project-RNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +73,7 @@
       "  (one_hot): Embedding(17770, 17770)\n",
       "  (rnn): LSTM(17770, 100, batch_first=True)\n",
       "  (l_out): Linear(in_features=100, out_features=17770, bias=False)\n",
+      "  (criteria): CrossEntropyLoss()\n",
       ")\n"
      ]
     }
@@ -98,6 +99,7 @@
     "        self.l_out = Linear(in_features=hidden_size,\n",
     "                            out_features=output_size,\n",
     "                            bias=False)\n",
+    "        self.criteria = nn.CrossEntropyLoss()\n",
     "    \n",
     "    def forward(self, x):\n",
     "        out = {}\n",
@@ -109,22 +111,28 @@
     "        return out\n",
     "    \n",
     "    def MyLoss(self, Y_hat, Y):\n",
+    "        # create a mask by filtering out all tokens that ARE NOT the padding token\n",
+    "        mask = (Y > 0).float()\n",
+    "        #if mask[0,-1]==0:\n",
+    "        #    m = len(mask[0,:])-1\n",
+    "        mask = mask.view(-1,1)\n",
     "        \n",
-    "        Y = self.one_hot(Y)\n",
-    "        \n",
-    "        Y = Y.view(-1,output_size)\n",
+    "        Y = Y.view(-1)\n",
     "        \n",
     "        Y_hat = Y_hat.view(-1, output_size)\n",
     "        \n",
-    "        # create a mask by filtering out all tokens that ARE NOT the padding token\n",
-    "        mask = (Y > 0).float()\n",
-    "        print(mask.size())\n",
     "        # count how many tokens we have\n",
     "        #nb_tokens = int(torch.sum(mask).data[0])\n",
-    "\n",
+    "        print('y_hat:',Y_hat.size(),Y_hat)\n",
+    "        print('y:',Y.size(),Y)\n",
+    "        #print('mask:',mask.size(),mask)\n",
     "        # pick the values for the label and zero out the rest with the mask\n",
     "        Y_hat = Y_hat * mask\n",
-    "        \n",
+    "        #print('2:',Y_hat.size(),Y_hat)\n",
+    "        #print('3:',Y_hat[m,:])\n",
+    "        #print(Y_hat.type())\n",
+    "        #print(Y.type())\n",
+    "        loss = self.criteria(Y_hat,Y)\n",
     "        return loss\n",
     "net = Net()\n",
     "print(net)"
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +154,7 @@
        " 'l_out.weight': True}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,33 +174,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 6134,   550,  1073,  1144,  1145,  1307,  1659,  1798,  2152,  3427,\n",
-      "         3610,  3736,  4520,  9144,  5293,  5317,  5496,  6073,  6263,  6287,\n",
-      "         6692,  6972,  7234,  9340,  9635,  9658, 10255, 11149, 12299, 12317,\n",
-      "        12435, 12470, 12672, 12911, 13651, 14149, 14233, 14313, 14367, 15124,\n",
-      "        15205, 15582, 16128, 16242, 16377, 16384, 16954, 17057, 17324,  5862,\n",
-      "        10906,  5730, 16357, 16469,   406,  1719,  2495,  3138,  3418,  3433,\n",
-      "         3825,  3936,  4389,  4745,  4883,  5239,  5327,  5939,  6497,  7240,\n",
-      "         7280,  7624,  8636,  9617, 10170, 10231, 10397, 10625, 11040, 11812,\n",
-      "        11837, 12092, 12232, 12494, 13255, 13462, 13524, 14660, 14718, 15151,\n",
-      "        15393, 15887, 16339, 17149, 17293])\n",
-      "tensor([  550,  1073,  1144,  1145,  1307,  1659,  1798,  2152,  3427,  3610,\n",
-      "         3736,  4520,  9144,  5293,  5317,  5496,  6073,  6263,  6287,  6692,\n",
-      "         6972,  7234,  9340,  9635,  9658, 10255, 11149, 12299, 12317, 12435,\n",
-      "        12470, 12672, 12911, 13651, 14149, 14233, 14313, 14367, 15124, 15205,\n",
-      "        15582, 16128, 16242, 16377, 16384, 16954, 17057, 17324,  5862, 10906,\n",
-      "         5730, 16357, 16469,   406,  1719,  2495,  3138,  3418,  3433,  3825,\n",
-      "         3936,  4389,  4745,  4883,  5239,  5327,  5939,  6497,  7240,  7280,\n",
-      "         7624,  8636,  9617, 10170, 10231, 10397, 10625, 11040, 11812, 11837,\n",
-      "        12092, 12232, 12494, 13255, 13462, 13524, 14660, 14718, 15151, 15393,\n",
-      "        15887, 16339, 17149, 17293,  7370])\n"
+      "y_hat: torch.Size([390, 17770]) tensor([[0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
+      "        [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
+      "        [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
+      "        ...,\n",
+      "        [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
+      "        [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
+      "        [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001]],\n",
+      "       grad_fn=<ViewBackward>)\n",
+      "y: torch.Size([390]) tensor([ 7632, 13359, 13728,  1144,  3782,  4302,  4656,  5112,  6196,  6931,\n",
+      "         7590,  8181,  8393,  8915,  9205,  9471,  9617,  9645, 10375, 12047,\n",
+      "        12582, 12918, 13102, 13391, 14103, 14312, 14856, 14909, 15124, 15156,\n",
+      "        15436, 15472, 15563, 15844, 15922, 16139, 16339, 16879, 16901,  1542,\n",
+      "         2782,  9144,  6287,  7234,  8636,  8904,  9340, 13050, 14313, 14367,\n",
+      "        14590, 15124, 15156, 16872, 10583, 16380,  6007,  1409,  2372, 12155,\n",
+      "         4590,  6428, 12799,  7786, 14533,  1700, 12359,  5582,  9628,  7513,\n",
+      "         1719, 17324, 15404, 12582, 15509,  5239,  5309, 13129,  5145,  4644,\n",
+      "         9144,  5317,  5496,  5862,  5939,  6029,  6287,  6692,  6974,  7234,\n",
+      "         7937,  8782,  9340,  9617, 11283, 11443, 11521, 12090, 12317, 12338,\n",
+      "        12470, 12473, 12672, 12870, 12911, 13050, 13488, 14313, 14574, 14691,\n",
+      "        14856, 14928, 15124, 15582, 16242, 16954, 17764, 17324,  1145,  1659,\n",
+      "         3725,  4705,  4883,  9144,  6266,  6287,  6972,  8277,  8636,  9340,\n",
+      "        11149, 12299, 12317, 12470, 12911, 13102, 13462, 13622, 13748, 14149,\n",
+      "        14313, 14538, 14712, 15124, 15205, 15393, 15436, 15472, 15582, 15887,\n",
+      "        16128, 16242, 16377, 16384, 17002, 17169,  1307,  1798,  2152,  3610,\n",
+      "         9144,  5293,  5317,  6287,  6386,  6692,  6972,  7234,  9340, 10378,\n",
+      "        11149, 11192, 11315, 11677, 12299, 12317, 12470, 12672, 12911, 13081,\n",
+      "        14149, 14313, 14367, 14538, 14712, 15205, 15582, 16025, 16128, 16242,\n",
+      "        16377, 17169, 17343, 11812, 14403,  1145,  1798,  2200,  2938,  3610,\n",
+      "         9144,  5309,  5317,  6235,  6287,  6844,  6972,  7234,  7617,  7624,\n",
+      "         7780,  9340,  9756, 10168, 10359, 11149, 11677, 12317, 12470, 13050,\n",
+      "        13081, 13129, 13651, 14367, 15062, 15205, 15307, 15472, 15582, 15689,\n",
+      "        16242, 16377, 16913, 17088,  1798,  4640,  4977,  9144,  5293,  5317,\n",
+      "         6287,  6692,  7234,  8743,  8840,  9144,  9204,  9340,  9565, 11149,\n",
+      "        11677, 12299, 12317, 12435, 12470, 12672, 12818, 12911, 13462, 14134,\n",
+      "        14313, 14367, 14538, 15205, 15578, 15582, 16128, 16242, 16377, 16384,\n",
+      "        16668, 16954, 17154, 16640,  1145,  2782,  4306,  4640,  5807,  6475,\n",
+      "        14242,  7635,  9645, 10170, 10275, 10358, 10359, 10375, 11149, 13050,\n",
+      "        14103, 14538, 14644, 15582, 16063, 16082, 16377, 16522, 16984, 17129,\n",
+      "        17506, 11658, 11812,  1890,  8904, 14550,  2950, 10550,  3917,  8980,\n",
+      "        15449, 13628,  1798,  2152,  5317,  5496,  6287,  6386,  6692,  6972,\n",
+      "         7234,  7364,  7617,  9235,  9340,  9683, 11149, 11677, 12054, 12299,\n",
+      "        12317, 12470, 12672, 12911, 13462, 13651, 14313, 14367, 14538, 14712,\n",
+      "        15124, 15205, 15545, 15582, 16242, 16377, 16384, 16668, 16954, 17129,\n",
+      "        17169,  1406,  2152,  3860,  5317,  6287,  6386,  6692,  6844,  7617,\n",
+      "         7624,  9340,  9756, 10359, 11265, 12317, 12470, 12911, 13050, 13102,\n",
+      "        13462, 14313, 14367, 14660, 15124, 15582,  3579,  4883,  5614, 10412,\n",
+      "        12172, 12228, 15070, 15116, 15764, 16901, 17308,  6833,  8764, 16879])\n"
      ]
     }
    ],
@@ -215,76 +250,29 @@
     "    batch_padded = torch.from_numpy(batch_padded).long()\n",
     "    padded_label = torch.from_numpy(padded_label).long()\n",
     "    output = net(batch_padded)\n",
+    "    #print('batch_length:',batch_length)\n",
     "    batch_loss = net.MyLoss(output,padded_label)\n",
     "    optimizer.zero_grad()\n",
     "    batch_loss.backward()\n",
-    "    optimizer.step()"
+    "    optimizer.step()\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[[0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         ...,\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001]],\n",
-      "\n",
-      "        [[0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         ...,\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001]],\n",
-      "\n",
-      "        [[0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         ...,\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         ...,\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001]],\n",
-      "\n",
-      "        [[0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         ...,\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001]],\n",
-      "\n",
-      "        [[0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         ...,\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001],\n",
-      "         [0.0001, 0.0001, 0.0001,  ..., 0.0001, 0.0001, 0.0001]]],\n",
-      "       grad_fn=<SoftmaxBackward>)\n"
+      "torch.Size([10, 197])\n"
      ]
     }
    ],
    "source": [
-    "print(output)"
+    "print(padded_label.size())"
    ]
   },
   {
